--- a/main.html
+++ b/main.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<!-- the entire body must be written by student -->
-		<h1>Welcome to the new Era of Artifical intelligence</h1>
+		<center><h1>Welcome to the new Era of Artifical intelligence</h1></center>
 	    <script type="text/javascript" src="./script.js">
 		</script>
 	</body>
